lab1/Test/L1-A-5-58.cmm
float UsOJe6goESIr [ 1805606199 ] [ 1990391007 ] [ 
  1067866884 ] [ 1472591460 ] 932791702 ] [ 246062751 
  ] [ 752966065 ] , Pm 

;
~